account and hotel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 # Log JPA queries
+# spring-data-jpa = true
 # spring.jpa.show-sql=true
 # Hibernate SQL dialect
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -23,3 +24,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # log4j.logger.org.hibernate=DEBUG
+
+server.max-http-header-size=10MB
